tests/ui/compile-fail/init/guard_access.stderr
error[E0425]: cannot find value `__x_guard` in this scope
  --> tests/ui/compile-fail/init/guard_access.rs:11:21
   |
11 |             let _ = __x_guard;
   |                     ^^^^^^^^^ not found in this scope
